Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/8167000/T8167000c.out
T8167000c.java:19:27: compiler.err.unreported.exception.need.to.catch.or.throw: java.lang.Throwable
- compiler.note.unchecked.filename: T8167000c.java
- compiler.note.unchecked.recompile
1 error
